examples/failing/LeadingZeros1.purs
module Main where

import Prelude

x = 01
